# LinkedIn-Lunatics

./: .gitignore  docker-compose.yaml  pyproject.toml
llmops/: scraper_pipeline.py
scraper/: scraper.py
src/: gutenberg.py  query_data_warehouse.py  scraper.py  scraper_entities.py  scraper_module.py  settings.py
src/db/: mongo_connect.py  mongo_service.py
tests/: test_mongo_connection.py  test_reddit_scrape.py
