[project]
name = "llm-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "poethepoet>=0.32.2",
    "praw>=7.8.1",
    "py-gutenberg>=1.0.3",
    "pydantic-settings>=2.7.1",
    "pymongo==4.6.2",
    "pytesseract>=0.3.13",
    "pytest-dependency>=0.6.0",
    "pytest>=8.2.2",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "zenml[server]>=0.74.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.32.2",
    "pytest==8.2.2",
    "ruff==0.4.9",
]

[tool.poe.tasks]
hello = "echo Hello from poe!"
